[package]
name = "descartes"
version = "0.1.21"
description = "Imprecision-tolerant computational geometry for Rust"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/descartes"
license = "MIT"
[badges]
maintenance = { status = "experimental" }

[dependencies]
nalgebra = "0.20"
ordered-float = "0.5.0"
itertools = "0.7.6"
fnv = "1.0.6"
serde = {version = "1", optional = true}
serde_derive = {version = "1", optional = true}
stable-vec = "0.3.1"
smallvec = "0.6.5"
compact = { git = "https://github.com/hsiang-lee/compact.git", rev = "e6b608308b", optional = true}

[dependencies.compact_macros]
version = "0.1.0"
optional = true

[dev-dependencies]
pretty_assertions = "0.5.1"

[features]
default = []
compact_containers = ["compact", "compact_macros"]
stdweb = ["nalgebra/stdweb"]
serde-serialization = ["serde", "serde_derive", "nalgebra/serde-serialize"]